========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-05-25

 - Fixed #449: Added options to bean-check: --no-cache and --cache-filename to
   override the cache location. These are added to bean-check only and are
   useful during development. The 'BEANCOUNT_DISABLE_LOAD_CACHE' and
   'BEANCOUNT_LOAD_CACHE_FILENAME' environment variables are still honored by
   the loader and work across all other programs.


2020-05-23

 - Fixed #184: Added explicit test for Inventory.average().
 - Fixed #404: Iex price source not working any more.
 - Fixed #281: Query "id" column does not identify transactions uniquely. Made
   the default hash_entry() function include metadata. Exclude metadata and
   derived fields explicitly in the context of comparison.
 - Fixed #182: Eliding an amount with total price raises TypeError.
 - Added options to filter accounts in "onecommodity" plugin: skip accounts with
   explicitly declared commodities, metadata of "onecommodity: FALSE" and added
   regular expression to specify the list of accounts to match (default: all).


2020-05-22

 - Migration of code repository to Github.


2020-05-02

 - Minor performance improvment by avoiding calling __iadd__ in a few places.
 - Fixed bug due to the removal of __version__ in apiclient:
   https://github.com/googleapis/google-api-python-client/commit/1d8ec6874e1c6081893de7cd7cbc86d1f6580320
 - Changes all imports from 'apiclient' to 'googleapiclient', which is now the
   recommended way.
 - Fixed some warnings.
 - Disabled expensive assertions in Inventory class and implemented a special
   case for adding to an empty inventory to avoid expensive aggregation. This
   can occur in aggregation loops and is unnecessarily expensive when adding a
   single, very large inventory.
 - Made balance check aggregation avoid an initial empty inventory object, and